samples/_failures_safe/1761171475_60ce42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3ed3538.c: In function ‘main’:
./samples/SAFE/__tmp_b3ed3538.c:155:13: error: expected ‘;’ at end of input
  155 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_b3ed3538.c:155:5: error: expected declaration or statement at end of input
  155 |     return 0
      |     ^~~~~~
